--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-!Doctype HTML
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      My Portfolio
+    </title>
+  </head>
+  <body>
+    <section class = "intro" >
+      <div>
+        <p>Hello World</p>
+      </div>
+    </section>
+  </body>
+</html>
