Update greeting text in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <section class = "intro" >
       <div>
-        <p>Hello World</p>
+        <p>Hello World - v2 </p>
       </div>
     </section>
     
