Fix HTML formatting in index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div>
         <p>Hello World - v21 </p>
         <img src="https://media.licdn.com/dms/image/v2/D5603AQFHG-dxD_ws1w/profile-displayphoto-crop_800_800/B56ZqspTFwHYAI-/0/1763833099446?e=1770854400&v=beta&t=0bnq5CEwNNwiBOW81qpH-4pUB3NCu0D0Ku61DQE9xig"
+          alt="profile photo"
           >
       </div>
     </section>
